added multiple pages

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
               <div class="service-card">
 
                 <div class="card-icon">
-                  <img src="./assets/images/service-3.svg" width="60" height="60" loading="lazy" alt="Women’s Course">
+                  <img src="./assets/images/service-3.svg" width="60" height="60" loading="lazy" alt="Lifestyle Revival">
                 </div>
 
                 <h3 class="h3">
-                  <a href="lifestyleRejuvanate.html" class="card-title">Lifestyle Rejuvanation</a>
+                  <a href="lifestyleRejuvanate.html" class="card-title">Lifestyle Revival</a>
                 </h3>
 
                 <p class="card-text">
@@ -301,7 +301,7 @@
 
                 <div class="card-content">
 
-                  <data class="card-price" value="3000">₹3000</data>
+                  <data class="card-price" value="3000">₹3k</data>
 
                   <p class="card-author">
                     <a href="#" class="card-link">
@@ -340,7 +340,7 @@
 
                 <div class="card-content">
 
-                  <data class="card-price" value="3500">₹3500</data>
+                  <data class="card-price" value="3500">₹3.5k</data>
 
                   <p class="card-author">
                     <a href="#" class="card-link">
@@ -379,7 +379,7 @@
 
                 <div class="card-content">
 
-                  <data class="card-price" value="2000">₹2000</data>
+                  <data class="card-price" value="2000">₹2k</data>
 
                   <p class="card-author">
                     <a href="#" class="card-link">
