--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -205,7 +205,7 @@
 
               <p class="section-text"><span><b>Burner Phase :</b></span>Expect diet timing changes, fat loss, higher energy, and some visible transformation by the end of stage.</p>
               
-              <p class="section-text"><span><u>Booster Phase</u><span>Prepare for muscle building in this stage. </p>
+              <p class="section-text"><span><b>Booster Phase</b><span>Prepare for muscle building in this stage. </p>
 
               <p class="section-text">    
               By the end of the course, you will have acquired lifelong knowledge that not only safeguards your own health but also benefits your family by protecting them from various diseases.</p>
