--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             Vedic Lifestyle survived 1000 of years and it still thrives
           </p>
 
-          <a href="#" class="btn btn-secondary">Explore Us</a>
+          <a href="#" class="btn btn-secondary">Explore</a>
 
           <div class="social-wrapper">
 
@@ -244,7 +244,7 @@
             <img src="./assets/images/profile.jpg" width="470" height="580" loading="lazy" alt="about banner"
               class="img-cover">
 
-           
+            <a href="#" class="btn btn-secondary">consult</a>
           </div>
 
           <div class="about-content">
@@ -261,7 +261,7 @@
             </style> 
 
             <p class="section-text">
-              Prashant is a graduate engineer from IIT Kharagpur with 7 years of working experience in the IT industry. He experienced several health ups and downs while working in physically demanding desk jobs, providing for his family.
+              Prashant is a graduate engineer from IIT Kharagpur with 7 years of working experience in the IT industry. He experienced several health ups and downs while working in back strainig desk jobs, earning bread & butter for his family.
             </p>
 
             <p class="section-text">
@@ -408,7 +408,7 @@
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Get to the point Sports nutrition</a>
+                    <a href="#" class="card-title">Get to the Point Sports Nutrition</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -447,7 +447,7 @@
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Vedic compound body excercise equipments</a>
+                    <a href="#" class="card-title">Vedic Compound Body Excercise Equipments</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -485,16 +485,16 @@
 
                 <div class="card-content">
 
-                  <data class="card-price" value="~">₹~</data>
+                  <data class="card-price" value="1000">₹1k</data>
 
                   <p class="card-author">
                     <a href="#" class="card-link">
-                      Time: <span class="span">3 Days</span>
+                      Time: <span class="span">21 Days</span>
                     </a>
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Workshop for Vedic Health Rejuvenation (Upcoming)</a>
+                    <a href="#" class="card-title">Gut Health Restoration</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -528,12 +528,12 @@
 
                   <p class="card-author">
                     <a href="#" class="card-link">
-                      Time: <span class="span">3 Days</span>
+                      Time: <span class="span">Upcoming</span>
                     </a>
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Workshop for Hormonal Health Rejuvenation (Upcoming)</a>
+                    <a href="#" class="card-title">Workshop for Vedic Health Rejuvenation</a>
                   </h3>
 
                   <ul class="card-meta-list">
