whatsapp contact added

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <img src="./assets/images/profile.jpg" width="470" height="580" loading="lazy" alt="about banner"
               class="img-cover">
 
-            <a href="#" class="btn btn-secondary">consult</a>
+            <a href="https://wa.me/917019297018" class="btn btn-secondary">consult</a>
           </div>
 
           <div class="about-content">
