--- a/index.html
+++ b/index.html
@@ -866,8 +866,8 @@
 
           <li>
             <address class="address">
-              176 W street name, New<br>
-              York, NY 10014
+              Eon Homes, Hinjewadi Phase 3, Pune<br>
+              Maharashtra - 411057
             </address>
           </li>
 
