--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
           <p class="footer-list-title">Subscribe Newsletter</p>
 
           <p class="footer-list-text">
-            Lorem Ipsum has been them an industry printer took a galley make book.
+            Upcoming Subscription based mailing
           </p>
 
           <form action="" class="footer-form">
