--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-primary">Join</a>
+      <a href="#course" class="btn btn-primary">Join</a>
 
       <button class="nav-toggle-btn" aria-label="open manu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
