course link updated

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             Vedic Lifestyle survived 1000 of years and it still thrives
           </p>
 
-          <a href="#" class="btn btn-secondary">Explore</a>
+          <a href="#course" class="btn btn-secondary">Explore</a>
 
           <div class="social-wrapper">
 
