side bar contact added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Contact</a>
+            <a href="https://wa.me/917019297018" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
         </ul>
