Instagram link added

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <ul class="social-list">
 
               <li>
-                <a href="#" class="social-link">
+                <a href="https://instagram.com/reformed.fitness.movement?igshid=NjIwNzIyMDk2Mg==" class="social-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
