made first card clickable

--- a/index.html
+++ b/index.html
@@ -309,11 +309,12 @@
 
             <li>
               <div class="course-card">
-
+<a href="lifestyleRejuvanate.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-1.jpg" width="350" height="300" loading="lazy"
                     alt="Lose Fat and Rejuvenate" class="img-cover">
                 </figure>
+</a>
 
                 <div class="card-content">
 
