--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <div class="container">
 
           <div class="title-wrapper">
-            <p class="section-subtitle">100+ Courses Available</p>
+            <p class="section-subtitle">5 Courses Available</p>
 
             <h2 class="h2 section-title">Fitness & Nutrition Courses</h2>
           </div>
