--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -72,7 +72,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-primary">Join</a>
+      <a href="https://wa.me/917019297018" class="btn btn-primary">Consult</a>
 
       <button class="nav-toggle-btn" aria-label="open manu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -106,7 +106,7 @@
             Vedic Lifestyle survived 1000 of years and it still thrives
           </p>
 
-          <a href="#" class="btn btn-secondary">Explore Course</a>
+          <a href="#about" class="btn btn-secondary">Details</a>
 
           <div class="social-wrapper">
 
@@ -163,10 +163,10 @@
         <div class="container">
 
           <div class="about-banner img-holder" style="--width: 470; --height: 580;">
-            <img src="./assets/images/profile.jpg" width="470" height="580" loading="lazy" alt="about banner"
+            <img src="./assets/images/courses-1.jpg" width="470" height="580" loading="lazy" alt="about banner"
               class="img-cover">
 
-            <a href="#" class="btn btn-secondary">Join</a>
+            <a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=3000.00&cu=INR&aid=uGICAgMCyl7PtaQ" class="btn btn-secondary">Subscribe</a>
           </div>
 
           <div class="about-content">
