--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -36,7 +36,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         Reformed Fitness<span class="span">.</span>
       </a>
 
@@ -49,7 +49,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li class="navbar-item">
@@ -65,7 +65,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Contact</a>
+            <a href="https://wa.me/917019297018" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
         </ul>
