--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         Reformed Fitness<span class="span">.</span>
       </a>
 
