--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -36,7 +36,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         Reformed Fitness<span class="span">.</span>
       </a>
 
@@ -49,7 +49,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="index.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li class="navbar-item">
@@ -57,7 +57,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#course" class="navbar-link" data-nav-link>All Course</a>
+            <a href="index.html" class="navbar-link" data-nav-link>All Course</a>
           </li>
 
           <li class="navbar-item">
