Tag line corrections

--- a/fatloss.html
+++ b/fatloss.html
@@ -103,7 +103,7 @@
           <h1 class="h1 hero-title">Lose Fat and Rejuvenate with a Spiritual Energy.</h1>
 
           <p class="hero-text">
-            Vedic Lifestyle survived 1000 of years and it still thrives
+            Vedic Lifestyle survived 1000 of years and it will continue to...
           </p>
 
           <a href="#" class="btn btn-secondary">Explore Course</a>
