--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
         style="background-image: url('./assets/images/hero-banner.jpg')">
         <div class="container">
 
-          <p class="hero-subtitle">Fitness & Nutrition</p>
+          <p class="hero-subtitle">Vedic Fitness & Nutrition</p>
 
-          <h1 class="h1 hero-title">Get reformed to fittest you via Vedic way.</h1>
+          <h1 class="h1 hero-title">Reform into Your Fittest Self the Vedic Way</h1>
 
           <p class="hero-text">
-            Vedic Lifestyle survived 1000 of years and it still thrives
+            Ayurveda, a Timeless Tradition That Has Thrived for Millennia and Will Endure...
           </p>
 
           <a href="#course" class="btn btn-secondary">Courses</a>
 
-          <div class="social-wrapper">
+         <!-- <div class="social-wrapper">
 
             <p class="social-title">Connect with us:</p>
 
@@ -140,7 +140,7 @@
 
             </ul>
 
-          </div>
+          </div>-->
 
         </div>
       </section>
@@ -166,16 +166,16 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="lifestyleRejuvanate.html" class="card-title">Lifestyle Revival</a>
+                  <span class="card-title">For Busy You</span>
                 </h3>
 
                 <p class="card-text">
-                  We assist clients experiencing low energy, increased belly fat, and seeking spiritual healing.
+                  We support busy professionals facing low energy, increased body fat, and seeking sustainable healing
                 </p>
 
-                <a href="lifestyleRejuvanate.html" class="btn btn-secondary">
+                <!--<a href="lifestyleRejuvanate.html" class="btn btn-secondary">
                   <ion-icon name="arrow-forward"></ion-icon>
-                </a>
+                </a>-->
 
               </div>
             </li>
@@ -184,20 +184,20 @@
               <div class="service-card active">
 
                 <div class="card-icon">
-                  <img src="./assets/images/service-2.svg" width="60" height="60" loading="lazy" alt="Basic Course">
+                  <img src="./assets/images/service-2.svg" width="60" height="60" loading="lazy" alt="Your Parents">
                 </div>
 
                 <h3 class="h3">
-                  <a href="elderlyCare.html" class="card-title">Dhatu Rejuvenation</a>
+                  <span class="card-title">Your Loving Family</span>
                 </h3>
 
                 <p class="card-text">
-                 Assistance for elderly individuals managing diabetes and blood pressure issues 
+                  Trust us to heal your parents from chronic ailments while you pursue your life goals 
                 </p>
 
-                <a href="elderlyCare.html" class="btn btn-secondary">
+              <!--  <a href="elderlyCare.html" class="btn btn-secondary">
                   <ion-icon name="arrow-forward"></ion-icon>
-                </a>
+                </a>-->
 
               </div>
             </li>
@@ -210,16 +210,16 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="sportsNutrition.html" class="card-title">Sports Nutrition</a>
+                  <span class="card-title">and Your Aspiring Goals</span>
                 </h3>
 
                 <p class="card-text">
-                  Assistance for sports performance enhancement, including marathons.
+                  Optimize your life goals of marathons, cyclothons, and a great physique with us
                 </p>
 
-                <a href="sportsNutrition.hmtl" class="btn btn-secondary">
+                <!--<a href="sportsNutrition.hmtl" class="btn btn-secondary">
                   <ion-icon name="arrow-forward"></ion-icon>
-                </a>
+                </a>-->
 
               </div>
             </li>
@@ -249,7 +249,7 @@
 
           <div class="about-content">
 
-            <p class="section-subtitle">IITian turned Nutrition Consultant</p>
+            <p class="section-subtitle">An IITian turned Nutrition Consultant</p>
 
             <h2 class="h2 section-title">Healing straight from written instrutions of Vedas</h2>
 
