changes in fatloss loss page for taglines

--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -98,17 +98,17 @@
         style="background-image: url('./assets/images/hero-banner.jpg')">
         <div class="container">
 
-          <p class="hero-subtitle">Fitness & Nutrition</p>
+          <p class="hero-subtitle">Vedic Fitness & Nutrition</p>
 
           <h1 class="h1 hero-title">Lose Fat and Rejuvenate with a Spiritual Energy.</h1>
 
           <p class="hero-text">
-            Vedic Lifestyle survived 1000 of years and it still thrives
+            Fat loss is not about deprivation, it's about making better choices
           </p>
 
           <a href="#about" class="btn btn-secondary">Details</a>
 
-          <div class="social-wrapper">
+          <!--<div class="social-wrapper">
 
             <p class="social-title">Connect with us:</p>
 
@@ -140,7 +140,7 @@
 
             </ul>
 
-          </div>
+          </div>-->
 
         </div>
       </section>
@@ -189,6 +189,14 @@
              One of the most remarkable aspects of the course is that it does not rely on any external supplements, making it cost-effective and sustainable even after completing the program.
               
             </p>
+
+            <!--
+              Table and options
+            -->  
+
+            
+
+
 
             <h3 class="about-h3">The 3-Phase Course</h3>
 
