break line added

--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -186,16 +186,16 @@
                 We offer 4 plans nurturing you and your family in varied situations:
               </p>
               <p class="section-text">  
-                <strong>Basic Package:</strong> For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
+                <strong>Basic Package</strong><br> For clients unable to join morning workout classes, this plan suits them the best, providing exercise charts and workout videos for self-guided workouts.
               </p>
               <p class="section-text">    
-                <strong>Value Package:</strong> Basic Plan + You get to attend live morning workouts guided by experts and receive all-season diet charts.
+                <strong>Value Package</strong><br> Basic Plan + You get to attend live morning workouts guided by experts and receive all-season diet charts.
               </p>
               <p class="section-text">
-                <strong>Couple Package:</strong> Value Plan + Achieve fitness goals with your partner as it becomes easier when your partner joins the same journey.
+                <strong>Couple Package</strong><br> Value Plan + Achieve fitness goals with your partner as it becomes easier when your partner joins the same journey.
               </p>
               <p class="section-text">
-                <strong>Elite Package:</strong> Value Plan + Family-focused plan where you receive one-time diet charts and 1 consultation each for the other 3 loving family members.
+                <strong>Elite Package</strong><br> Value Plan + Family-focused plan where you receive one-time diet charts and 1 consultation each for the other 3 loving family members.
               </p>
 
 
