--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -556,7 +556,7 @@
     <div class="footer-top section" data-section>
       <div class="container">
 
-        <div class="footer-list">
+        <!-- <div class="footer-list">
 
           <p class="footer-list-title">Subscribe Newsletter</p>
 
@@ -571,9 +571,9 @@
             <button type="submit" class="btn btn-secondary">Subscribe Now</button>
           </form>
 
-        </div>
+        </div> -->
 
-        <ul class="footer-list">
+        <!-- <ul class="footer-list">
 
           <li>
             <p class="footer-list-title">All Courses</p>
@@ -599,9 +599,9 @@
             <a href="#" class="footer-link">Sports Nutrition</a>
           </li>
 
-        </ul>
+        </ul> -->
 
-        <ul class="footer-list">
+        <!-- <ul class="footer-list">
 
           <li>
             <p class="footer-list-title">Help Links</p>
@@ -631,12 +631,12 @@
             <a href="#" class="footer-link">Online Classes</a>
           </li>
 
-        </ul>
+        </ul> -->
 
         <ul class="footer-list">
 
           <li>
-            <p class="footer-list-title">Opening Hours</p>
+            <p class="footer-list-title">Consultation Hours</p>
           </li>
 
           <li>
@@ -657,8 +657,10 @@
 
           <li>
             <address class="address">
-              176 W street name, New<br>
-              York, NY 10014
+              Maheshpur, Varanasi<br>
+              Uttar Pradesh - 221106<br>
+              reformedfitnessmovement@gmail.com
+              Mob: 7019297018
             </address>
           </li>
 
