--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -309,14 +309,14 @@
                           <td>&#10003;</td>
                       </tr>
                         <tr>
-                          <td>1 Ritucharya Recipes</td>
+                          <td>1 Season Recipes</td>
                           <td>&#10003;</td>
                           <td>&#10003;</td>
                           <td>&#10003;</td>
                           <td>&#10003;</td>
                       </tr>
                         <tr>
-                          <td>4 Ritucharya Recipes</td>
+                          <td>4 Season Recipes</td>
                           <td>&times;</td>
                           <td>&#10003;</td>
                           <td>&#10003;</td>
@@ -673,12 +673,12 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Futras Made With
+          &copy; 2023 RFM Made With
           <ion-icon name="heart" aria-hidden="true"></ion-icon> by
           <a href="#" class="copyright-link">codewithsadee</a>
         </p>
 
-        <ul class="footer-bottom-list">
+        <!-- <ul class="footer-bottom-list">
 
           <li class="footer-bottom-item">
             <a href="#" class="footer-bottom-link">Terms of Service</a>
@@ -696,7 +696,7 @@
             <a href="#" class="footer-bottom-link">Security</a>
           </li>
 
-        </ul>
+        </ul> -->
 
       </div>
     </div>
