--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -53,26 +53,26 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#about" class="navbar-link" data-nav-link>About Us</a>
+            <a href="index.html" class="navbar-link" data-nav-link>About Us</a>
           </li>
 
           <li class="navbar-item">
-            <a href="index.html" class="navbar-link" data-nav-link>All Course</a>
+            <a href="index.html#course" class="navbar-link" data-nav-link>All Course</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
+            <a href="index.html#blog" class="navbar-link" data-nav-link>Blog</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Contact</a>
+            <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
         </ul>
 
       </nav>
 
-      <a href="https://wa.me/917019297018" class="btn btn-primary">Consult</a>
+      <a href="https://wa.me/917019297018" class="btn btn-primary">WA-Consult</a>
 
       <button class="nav-toggle-btn" aria-label="open manu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -655,7 +655,7 @@
             <p class="footer-list-title address-title">Location</p>
           </li>
 
-          <li>
+          <li id="contact">
             <address class="address">
               Maheshpur, Varanasi<br>
               Uttar Pradesh - 221106<br>
