--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
           </li>
 
           <li class="navbar-item">
-            <a href="https://wa.me/917019297018" class="navbar-link" data-nav-link>Contact</a>
+            <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
         </ul>
 
       </nav>
 
-      <a href="https://wa.me/917019297018" class="btn btn-primary">Join</a>
+      <a href="https://wa.me/917019297018" class="btn btn-primary">Consult</a>
 
       <button class="nav-toggle-btn" aria-label="open manu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -717,7 +717,7 @@
         - #APP
       -->
 
-      <section class="section app" aria-label="app" data-section>
+      <!-- <section class="section app" aria-label="app" data-section>
         <div class="container">
 
           <div class="app-card">
@@ -744,7 +744,7 @@
           </div>
 
         </div>
-      </section>
+      </section> -->
 
     </article>
   </main>
@@ -762,12 +762,12 @@
     <div class="footer-top section" data-section>
       <div class="container">
 
-        <div class="footer-list">
+        <!-- <div class="footer-list">
 
           <p class="footer-list-title">Subscribe Newsletter</p>
 
           <p class="footer-list-text">
-            Upcoming Subscription based mailing
+            Lorem Ipsum has been them an industry printer took a galley make book.
           </p>
 
           <form action="" class="footer-form">
@@ -777,41 +777,37 @@
             <button type="submit" class="btn btn-secondary">Subscribe Now</button>
           </form>
 
-        </div>
+        </div> -->
 
-        <ul class="footer-list">
+        <!-- <ul class="footer-list">
 
           <li>
             <p class="footer-list-title">All Courses</p>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Daily Exercise</a>
+            <a href="#" class="footer-link">Exercises (>20 yrs)</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Find Your Balance</a>
+            <a href="#" class="footer-link">Exercises (>50 yrs)</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Personal Program</a>
+            <a href="#" class="footer-link">Lifestyle Rejuvanation</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Natural Process</a>
+            <a href="#" class="footer-link">Elderly Care</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Immune System</a>
+            <a href="#" class="footer-link">Sports Nutrition</a>
           </li>
 
-          <li>
-            <a href="#" class="footer-link">Gives You Energy</a>
-          </li>
+        </ul> -->
 
-        </ul>
-
-        <ul class="footer-list">
+        <!-- <ul class="footer-list">
 
           <li>
             <p class="footer-list-title">Help Links</p>
@@ -841,12 +837,12 @@
             <a href="#" class="footer-link">Online Classes</a>
           </li>
 
-        </ul>
+        </ul> -->
 
         <ul class="footer-list">
 
           <li>
-            <p class="footer-list-title">Opening Hours</p>
+            <p class="footer-list-title">Consultation Hours</p>
           </li>
 
           <li>
@@ -862,13 +858,15 @@
           </li>
 
           <li>
-            <p class="footer-list-title address-title">Location</p>
+            <p class="footer-list-title address-title">Contact Us</p>
           </li>
 
-          <li>
+          <li id="contact">
             <address class="address">
-              Eon Homes, Hinjewadi Phase 3, Pune<br>
-              Maharashtra - 411057
+              Maheshpur, Varanasi<br>
+              Uttar Pradesh - 221106<br>
+              reformedfitnessmovement@gmail.com
+              Mob: 7019297018
             </address>
           </li>
 
@@ -886,7 +884,7 @@
           <a href="#" class="copyright-link">codewithsadee</a>
         </p>
 
-        <ul class="footer-bottom-list">
+        <!-- <ul class="footer-bottom-list">
 
           <li class="footer-bottom-item">
             <a href="#" class="footer-bottom-link">Terms of Service</a>
@@ -904,7 +902,7 @@
             <a href="#" class="footer-bottom-link">Security</a>
           </li>
 
-        </ul>
+        </ul> -->
 
       </div>
     </div>
