--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -72,7 +72,7 @@
 
       </nav>
 
-      <a href="https://wa.me/917019297018" class="btn btn-primary">WA-Consult</a>
+      <a href="https://wa.me/917019297018" class="btn btn-primary">Consult</a>
 
       <button class="nav-toggle-btn" aria-label="open manu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -652,7 +652,7 @@
           </li>
 
           <li>
-            <p class="footer-list-title address-title">Location</p>
+            <p class="footer-list-title address-title">Contact Us</p>
           </li>
 
           <li id="contact">
