--- a/lifestyleRejuvanate.html
+++ b/lifestyleRejuvanate.html
@@ -166,7 +166,7 @@
             <img src="./assets/images/courses-1.jpg" width="470" height="580" loading="lazy" alt="about banner"
               class="img-cover">
 
-            <a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=3000.00&cu=INR&aid=uGICAgMCyl7PtaQ" class="btn btn-secondary">Ask More</a>
+            <a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=3000.00&cu=INR&aid=uGICAgMCyl7PtaQ" class="btn btn-secondary">Confusion?</a>
           </div>
 
           <div class="about-content">
@@ -204,7 +204,7 @@
             -->  
             <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Plans</title>
@@ -213,30 +213,38 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
-            overflow-x: auto; /* Enable horizontal scrolling */
+            overflow-x: auto;
+            border: 2px solid darkgreen;
+            background-color: rgba(255, 255, 255, 0.3);
         }
 
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid darkgreen;
             padding: 8px;
             text-align: center;
         }
 
         th {
-            background-color: #f2f2f2;
+            background-color: darkgreen;
+            color: white; /* Set text color to white */
         }
 
         td:first-child {
-            font-size: 12px; /* Adjust the font size for the first column (Description) */
+            font-size: 12px;
+            font-weight: bold;
+            color: darkslategray;
         }
 
         @media only screen and (max-width: 400px) {
-            /* Apply styles for screens with a maximum width of 640 pixels (typical for mobile phones) */
             table {
-                overflow-x: scroll; /* Enable horizontal scrolling on smaller screens */
+                overflow-x: scroll;
                 width: 400px;
-                display:block;
+                display: block;
             }
+        }
+
+        #viewNote {
+            font-style: italic;
         }
     </style>
 </head>
