--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -173,7 +173,7 @@
 
             <p class="section-subtitle">Description </p>
 
-            <h2 class="h2 section-title">Enter the Vedic fatloss journey</h2>
+            <h2 class="h2 section-title">Enter the Vedic Elderly Care Journey</h2>
 
              <style>
                 /* Add margin-bottom to create space between paragraphs */
