--- a/index.html
+++ b/index.html
@@ -309,25 +309,25 @@
 
             <li>
               <div class="course-card">
-<a href="lifestyleRejuvanate.html">
+              <a href="lifestyleRejuvanate.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-1.jpg" width="350" height="300" loading="lazy"
                     alt="Lose Fat and Rejuvenate" class="img-cover">
                 </figure>
-</a>
+              </a>
 
                 <div class="card-content">
 
-                  <data class="card-price" value="3000">₹3k</data>
+                  <data class="card-price" value="3000">₹3-6k</data>
 
                   <p class="card-author">
-                    <a href="#" class="card-link">
-                      Time: <span class="span">3-4 months</span>
+                    <a href="lifestyleRejuvanate.html" class="card-link">
+                      Time: <span class="span">3-5 months</span>
                     </a>
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Lose Fat and Rejuvenate</a>
+                    <a href="lifestyleRejuvanate.html" class="card-title">Lose Fat and Rejuvenate</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -353,24 +353,24 @@
 
             <li>
               <div class="course-card">
-
+                <a href="elderlyCare.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-2.jpg" width="350" height="300" loading="lazy"
                     alt="Introduction to Food and Health." class="img-cover">
                 </figure>
-
+              </a>
                 <div class="card-content">
 
-                  <data class="card-price" value="3500">₹3.5k</data>
+                  <data class="card-price" value="3500">₹4-7k</data>
 
                   <p class="card-author">
-                    <a href="#" class="card-link">
-                      Time: <span class="span">4-5 months</span>
+                    <a href="elderlyCare.html" class="card-link">
+                      Time: <span class="span">6 months</span>
                     </a>
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Revive and Thrive Elderly Health</a>
+                    <a href="elderlyCare.html" class="card-title">Revive and Thrive Elderly Health</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -392,24 +392,25 @@
 
             <li>
               <div class="course-card">
-
+                <a href="sportsNutrition.html">
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-3.jpg" width="350" height="300" loading="lazy"
                     alt="Nutrition and Lifestyle in Pregnancy" class="img-cover">
                 </figure>
+                </a>
 
                 <div class="card-content">
 
-                  <data class="card-price" value="2000">₹2k</data>
+                  <data class="card-price" value="2000">₹3-4k</data>
 
                   <p class="card-author">
-                    <a href="#" class="card-link">
-                      Time: <span class="span">2-3 months</span>
+                    <a href="sportsNutrition.html" class="card-link">
+                      Time: <span class="span">3 months</span>
                     </a>
                   </p>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Get to the Point Sports Nutrition</a>
+                    <a href="sportsNutrition.html" class="card-title">Get to the Point Sports Nutrition</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -431,19 +432,17 @@
 
             <li>
               <div class="course-card">
-
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
                   <img src="./assets/images/courses-4.jpg" width="350" height="300" loading="lazy"
                     alt="Expertise on Fitness, Nutrition and Health" class="img-cover">
                 </figure>
-
                 <div class="card-content">
 
                   <data class="card-price" value="x/kg">₹x/kg</data>
 
                   <p class="card-author">
                     <a href="#" class="card-link">
-                      Time: <span class="span">1 week delivery</span>
+                      Time: <span class="span">Upcoming</span>
                     </a>
                   </p>
 
@@ -476,7 +475,7 @@
               </div>
             </li>
 
-            <li>
+            <!-- <li>
               <div class="course-card">
 
                 <figure class="card-banner img-holder" style="--width: 350; --height: 300;">
@@ -513,7 +512,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
             <li>
               <div class="course-card">
