Updated Payment links

--- a/elderlyCare.html
+++ b/elderlyCare.html
@@ -272,15 +272,20 @@
                             <td>&#10003;</td>
                         </tr>
                         <tr>
-                            <td>Personalized Consultation</td>
-                            <td>&#10003;</td>
-                            <td>&#10003;</td>
-                        </tr>
+                          <td>Knee Care</td>
+                          <td>&#10003;</td>
+                          <td>&#10003;</td>
+                      </tr>
                         <tr>
                             <td>Gut Cleanse and Detox</td>
                             <td>&#10003;</td>
                             <td>&#10003;</td>
                         </tr>
+                        <tr>
+                          <td>Eye Care and Skin Detox</td>
+                          <td>&#10003;</td>
+                          <td>&#10003;</td>
+                      </tr>
                         <tr>
                             <td>Destress Tools</td>
                             <td>&#10003;</td>
@@ -291,36 +296,26 @@
                           <td>&#10003;</td>
                           <td>&#10003;</td>
                       </tr>
-                        <tr>
-                          <td>Knee Care</td>
-                          <td>&#10003;</td>
-                          <td>&#10003;</td>
-                      </tr>
+                       
                         <tr>
                           <td>4 Season Recipes</td>
-                          <td>&times;</td>
+                          <td>&#10003;</td>
                           <td>&#10003;</td>
                       </tr>
                         <tr>
                           <td>Live Workout Class</td>
-                          <td>&times;</td>
+                          <td>&#10003;</td>
                           <td>&#10003;</td>
                       </tr>
                       <tr>
-                        <td>Family Consultation</td>
-                        <td>&times;</td>
-                        <td>&times;</td>
-                    </tr>
-                        <tr>
-                          <td>Consultation</td>
-                          <td>6</td>
-                          <td>10</td>
-                      </tr>
-                      
+                        <td>Personalized Consultation</td>
+                        <td>&#10003;</td>
+                        <td>&#10003;</td>
+                    </tr>                      
                         <tr>
                             <td>Duration (in months)</td>
-                            <td>3</td>
-                            <td>5</td>
+                            <td>6</td>
+                            <td>6</td>
                         </tr>
                         <!-- Additional row for Price (in INR) -->
                         <tr>
@@ -412,7 +407,7 @@
               linkText.innerHTML = '<a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=4000.00&cu=INR&aid=uGICAgMCyl7PtaQ" onclick="handleLink(\'value\')">Pay Here</a>';
               break;
           case 'cmad':
-              linkText.innerHTML = '<a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=6000.00&cu=INR&aid=uGICAgMCyl7PtaQ" onclick="handleLink(\'elite\')">Pay Here</a>';
+              linkText.innerHTML = '<a href="upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=7000.00&cu=INR&aid=uGICAgMCyl7PtaQ" onclick="handleLink(\'elite\')">Pay Here</a>';
               break;
           default:
               linkText.innerHTML = '<a href="#" onclick="handleLink()">Link</a>';
@@ -428,8 +423,8 @@
               imageLink.href = 'upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=4000.00&cu=INR&aid=uGICAgMCyl7PtaQ';
               break;
           case 'cmad':
-              image.src = './assets/images/Payment6k.jpg';
-              imageLink.href = 'upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=6000.00&cu=INR&aid=uGICAgMCyl7PtaQ';
+              image.src = './assets/images/Payment7k.jpg';
+              imageLink.href = 'upi://pay?pa=reformedfitnessmovement@okhdfcbank&pn=Reformed%20Fitness%20Movement&am=7000.00&cu=INR&aid=uGICAgMCyl7PtaQ';
               break;
           default:
               image.src = ''; // Set a default or placeholder image source
